# traffic-larsjohansen-com

./: .gitignore  LICENSE.md  README.md
backend/: .flake8  Dockerfile  README_commute.md  docker-compose.yml  healthcheck.py  main.py  pyproject.toml
backend/app/: commute_heatmaps_prettyformat.py  main.py
backend/app/api/: healthcheck_api.py  traffic_api.py
backend/app/constants/: secrets.py
backend/app/db/: db.py
backend/app/job/: data_gathering.py
backend/scripts/: build-and-deploy.sh
frontend/: README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/app/: root.tsx  routes.ts
frontend/app/components/: HeatMap.tsx  Loading.tsx  Unknown.tsx
frontend/app/constants/: path.ts
frontend/app/routes/: index.tsx  unknown.tsx
frontend/app/styles/: app.css  theme.ts
frontend/scripts/: deploy-to-s3.sh
